--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,12 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+ipykernel = "*"
 
 [packages]
 praw = "*"
+pandas = "*"
+python-dotenv = "*"
 
 [requires]
 python_version = "3.7"
