--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,10 @@ verify_ssl = true
 
 [packages]
 praw = "*"
+flask = "*"
+flask-sqlalchemy = "*"
+flask-migrate = "*"
+pandas = "*"
 
 [requires]
 python_version = "3.7"
