--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\jblac\\.virtualenvs\\DataScience-c4kriQ8r\\Scripts\\python.exe"
+    "python.pythonPath": "C:\\Users\\jblac\\.virtualenvs\\DataScience-W6A1pj3V\\Scripts\\python.exe"
 }
